started on menu

--- a/home.html
+++ b/home.html
@@ -8,11 +8,25 @@
 	</head>
 
 	<body>
-		<header>
-			<h1>Instructional Center</h1>
-		</header>	
+		<header class="intro">test</header>	
+		<nav role="navigation" class="navigation">
+			<div class="container">
+				<ul class="dropdown">
+					<li class ="dropdown-items">
+						<a href="http://depts.washington.edu/ic/content/about.php?style=graphics" class="dropdown-toggle">About
+						</a>
+						<ul>
+							<li>
+								<a href="http://depts.washington.edu/ic/content/about2.php?style=graphics">What is the IC?</a>
+							</li>
+						</ul>
 
+					</li>
+				</ul>
+			</div>
+		</nav>
 
+		<h1>Welcome to the Instructional Center</h1>
 	</body>
 
 </html>
