--- a/home.html
+++ b/home.html
@@ -4,27 +4,44 @@
 	<head>
 		<title>IC Home Page</title>
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
+		 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.1/angular.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	</head>
 
 	<body>
-		<header class="intro">test</header>	
-		<nav role="navigation" class="navigation">
-			<div class="container">
-				<ul class="dropdown">
-					<li class ="dropdown-items">
-						<a href="http://depts.washington.edu/ic/content/about.php?style=graphics" class="dropdown-toggle">About
-						</a>
-						<ul>
-							<li>
-								<a href="http://depts.washington.edu/ic/content/about2.php?style=graphics">What is the IC?</a>
-							</li>
-						</ul>
+		<header class="intro">
+			<h1>Office of Minority Affairs & Diversity </h1>
+			<h2>University of Washington</h2>
+		</header>	
+					<nav role="navigation" id="nav">
+				<div id="nav_wrapper">
+					<ul>
+						<li><a href="#">HOME</a>
+							<ul>
+								<li><a href="#">What is the IC?</a></li>
+							</ul>
+						</li>
 
-					</li>
-				</ul>
-			</div>
-		</nav>
+						<li><a href="#">ABOUT</a>
+							<ul>
+								<li><a href="#">What is the IC?</a></li>
+								<li><a href="#">What is the IC?</a></li>
+								<li><a href="#">What is the IC?</a></li>
+							</ul>
+						</li>
+						<li><a href="#">CONTACT</a>
+							<ul>
+								<li><a href="#">What is the IC?</a></li>
+							</ul>
+						</li>
+						<li><a href="#">STAFF</a>
+							<ul>
+								<li><a href="#">Get to know us!</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+			</nav>
 
 		<h1>Welcome to the Instructional Center</h1>
 	</body>
