--- a/home.html
+++ b/home.html
@@ -3,15 +3,19 @@
 <html>
 	<head>
 		<title>IC Home Page</title>
+		<link rel="page icon" href="img/wlogo.png">
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
 		 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.1/angular.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	</head>
 
 	<body>
-		<header class="intro">
-			<h1>Office of Minority Affairs & Diversity </h1>
-			<h2>University of Washington</h2>
+		<header class="purplestrip">
+			<div class="container">
+				<img src="img/logo.png">
+				<h2>Office of Minority Affairs & Diversity </h2>
+				<h3>University of Washington</h3>
+			</div>
 		</header>	
 					<nav role="navigation" id="nav">
 				<div id="nav_wrapper">
@@ -44,6 +48,7 @@
 			</nav>
 
 		<h1>Welcome to the Instructional Center</h1>
+		<img href="img/logo.png">
 	</body>
 
 </html>
