--- a/home.html
+++ b/home.html
@@ -11,10 +11,12 @@
 
 	<body>
 		<header class="purplestrip">
-			<div class="container">
-				<img src="img/logo.png">
-				<h2>Office of Minority Affairs & Diversity </h2>
-				<h3>University of Washington</h3>
+			<div class="">
+				<div>
+					<a id="w-Logo" href="http://uw.edu" title="University of Washington Home"><img src="img/logo.png"></a>
+					<h1>Office of Minority Affairs & Diversity </h1>
+					<h2>University of Washington</h2>
+				</div>
 			</div>
 		</header>	
 					<nav role="navigation" id="nav">
@@ -28,8 +30,6 @@
 
 						<li><a href="#">ABOUT</a>
 							<ul>
-								<li><a href="#">What is the IC?</a></li>
-								<li><a href="#">What is the IC?</a></li>
 								<li><a href="#">What is the IC?</a></li>
 							</ul>
 						</li>
@@ -48,7 +48,56 @@
 			</nav>
 
 		<h1>Welcome to the Instructional Center</h1>
-		<img href="img/logo.png">
+
+		<head>
+			<script type="text/javascript">
+				//images for slideshow
+				var slideimages = new Array() // create new array to preload images
+				slideimages[0] = new Image() // create new instance of image object
+				slideimages[0].src = "img/image1.jpg" // set image object src property to an image's src, preloading that image in the process
+				slideimages[1] = new Image()
+				slideimages[1].src = "img/image2.jpg"
+				slideimages[2] = new Image()
+				slideimages[2].src = "img/image3.gif"
+			</script>
+		</head>
+
+		<body>
+			<a href="javascript:slidelink()"><img src="img/image1.jpg" id="slide" /></a>
+
+			<script type="text/javascript">
+				//code for slideshow
+				//variable that will increment through the images
+				var step = 0
+				var whichimage = 0
+
+				function slideit(){
+						 //if browser does not support the image object, exit.
+					if (!document.images)
+						return
+						document.getElementById('slide').src = slideimages[step].src
+						whichimage = step
+					if (step<2)
+						step++
+					else
+						step=0
+						 //call function "slideit()" every 5 seconds
+					setTimeout("slideit()",5000)
+				}
+
+				function slidelink(){
+					if (whichimage == 0) //insert links here
+						window.location = "link1.htm"
+					else if (whichimage == 1)
+						window.location = "link2.htm"
+					else if (whichimage == 2)
+						window.location = "link3.htm"
+				}
+
+				slideit()
+
+			</script>
+		</body>
 	</body>
 
 </html>
