--- a/About Us/aboutus.html
+++ b/About Us/aboutus.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>About Us</title>
 
-        <link rel="stylesheet" href="css/aboutus.css">
+		<link rel="stylesheet" href="css/main.css">
+        <!--<link rel="stylesheet" href="css/aboutus.css">-->
 
 	    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.1/angular.min.js"></script>
 
@@ -14,7 +15,7 @@
 	<body>
 		<article>
 			<header>
-				<h1>About Us</h1>
+				<h1>Test test Test</h1>
 			</header>
 
 			<nav role="navigation" id="nav">
@@ -26,7 +27,7 @@
 							</ul>
 						</li>
 
-						<li><a href="#">ABOUT</a>
+						<li><a href="#">ABOUT</a> 
 							<ul>
 								<li><a href="#">What is the IC?</a></li>
 								<li><a href="#">What is the IC?</a></li>
@@ -48,7 +49,8 @@
 			</nav>
 
 			<main class="info">
-				<h3>What is the IC?</h3>
+				<h1>About Us</h1>
+				<h3>What is the Instructional Center?</h3>
 				<p>The Committee on Learning Skills Centers says that "it is a special place where students come for special instruction not usually included in 'regular' classrooms." This means that the Instructional Center (IC) is a place where students can take their time to learn and where students are not afraid to ask questions. It is a place where students study together and develop support groups and lasting friendships. The IC is truly a special place at the University of Washington.</p>
 
 				<p>Studies show that students who attend learning centers achieve better grades and are more successful during their college careers. The Instructional Center provides academic support for OMAD students.  By using the Instructional Center regularly you will:</p>
