--- a/About Us/staff.html
+++ b/About Us/staff.html
@@ -4,6 +4,7 @@
 
 		<title>IC Staff Members</title>
 
+		<link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/staffcss.css">
 
 	    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.1/angular.min.js"></script>
@@ -12,42 +13,77 @@
 
 	</head>
 	<body ng-app="StaffApp" ng-controller="StaffController">
-		<main class="container-fluid">
+		<article>
 			<header class="page-title">
-				<h1>Instructional Center Staff</h1>
+				<h1>Test Test test</h1>
 			</header>
 
-			<section class="searchFilter">
-				<div class ="sort-ui">
-					<span>Sort By:</span>
-					<div class="btn-group">
-						<button ng-class="{active: sortBy('department')}" ng-click="order='department'" type="button" class="btn btn-default">Department</button>
-						<button ng-class="{active: sortBy('lastName')}" ng-click="order = 'lastName'" type="button" class="btn btn-default">Last Name</button>
-						<button ng-class="{active: sortBy('firstName')}" ng-click="order = 'firstName'" type="button" class="btn btn-default">First Name</button>
-					</div>
+			<nav role="navigation" id="nav">
+				<div id="nav_wrapper">
+					<ul>
+						<li><a href="#">HOME</a>
+							<ul>
+								<li><a href="#">What is the IC?</a></li>
+							</ul>
+						</li>
+
+						<li><a href="#">ABOUT</a> 
+							<ul>
+								<li><a href="#">What is the IC?</a></li>
+								<li><a href="#">What is the IC?</a></li>
+								<li><a href="#">What is the IC?</a></li>
+							</ul>
+						</li>
+						<li><a href="#">CONTACT</a>
+							<ul>
+								<li><a href="#">What is the IC?</a></li>
+							</ul>
+						</li>
+						<li><a href="#">STAFF</a>
+							<ul>
+								<li><a href="#">Get to know us!</a></li>
+							</ul>
+						</li>
+					</ul>
 				</div>
-				<div id="sort">Currently, the address book is ordered by {{isSortedBy(order)}}</div>
-			</section>
-
-			<div class="filter-ui">
-				<input type="text" class="form-control" placeholder="Search..." ng-model="search">
-			</div>
-		</section>
-
-		<section class="staffInfo">
-			<ul class="cards">
-				<li class="card" ng-repeat="current in staff | filter:search | orderBy:order">
-					<img ng-src="{{current.picUrl}}" alt="picture of {{current.firstName}} {{current.lastName}}" />
-					<div class="information">
-						<h2 class="name">{{current.firstName}} {{current.lastName}}</h2>
-						<p class="title">{{current.title}}</p>
-						<p class="department">{{current.department}}</p>
+			</nav>
+			
+			<main class="container-fluid">
+				<h2>Get to know our staff!</h2>
+					<div class="searchFilter">
+						<div class ="sort-ui">
+							<span>Sort By:</span>
+							<div class="btn-group">
+								<button ng-class="{active: sortBy('department')}" ng-click="order='department'" type="button" class="btn btn-default">Department</button>
+								<button ng-class="{active: sortBy('lastName')}" ng-click="order = 'lastName'" type="button" class="btn btn-default">Last Name</button>
+								<button ng-class="{active: sortBy('firstName')}" ng-click="order = 'firstName'" type="button" class="btn btn-default">First Name</button>
+							</div>
+						</div>
 					</div>
-				</li>
-			</ul>
-		</section>
 
-		</main>
+					<div class="filter-ui">
+						<input type="search" class="form-control" placeholder="Search..." ng-model="search">
+					</div>
+
+					<div class="staffInfo">
+						<ul class="cards">
+							<li class="card" ng-repeat="current in staff | filter:search | orderBy:order">
+								<img ng-src="{{current.picUrl}}" alt="picture of {{current.firstName}} {{current.lastName}}" />
+								<div class="information">
+									<h2 class="name">{{current.firstName}} {{current.lastName}}</h2>
+									<p class="title">{{current.title}}</p>
+									<p class="department">{{current.department}}</p>
+								</div>
+							</li>
+						</ul>
+					</div>
+			</main>
+
+			<footer>
+				<p>&#169; Instructional Center</p>
+			</footer>
+
+		</article>
 		<script src="js/staff.js"></script>
 		<script src="js/staffapp.js"></script>
 	</body>
